[package]
name = "NStgbR"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.14.0"
tokio = { version = "1.44.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"